// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Array.prototype.some cannot be "referenced" 1`] = `
"snippetCode.ts (3,19): Builtin properties cannot be referenced

      1 | 
      2 |       const x = [0, 1, 2];
    > 3 |       const y = x['some'];
        |                   ^
      4 |     
"
`;

exports[`Array.prototype.some cannot be referenced 1`] = `
"snippetCode.ts (3,19): Builtin properties cannot be referenced

      1 | 
      2 |       const x = [0, 1, 2];
    > 3 |       const y = x.some;
        |                   ^
      4 |     
"
`;
